--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,7 +1,7 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path,  :method => :get do
+= form_tag movies_path, :method => :get do
   Include:
   - @all_ratings.each do |rating|
     = rating
@@ -11,9 +11,9 @@
 %table#movies
   %thead
     %tr
-      %th{:class=>("hilite" if @sort_column =="title")}= link_to'Movie Title', movies_path(:sort_by=>'title'), :id=>"title_header"
+      %th{:class=>("hilite" if @sorting =="title")}= link_to'Movie Title', movies_path(:sort=>'title'), :id=>"title_header"
       %th Rating
-      %th{:class=>("hilite" if @sort_column =="release_date")}= link_to'Release Date', movies_path(:sort_by=>'release_date'), :id=>"release_date_header"
+      %th{:class=>("hilite" if @sorting =="release_date")}= link_to'Release Date', movies_path(:sort=>'release_date'), :id=>"release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
